--- a/Index.html
+++ b/Index.html
@@ -13,10 +13,10 @@
     <button id="close-menu">✕</button>
     <h3>Menu</h3>
     <ul>
-        <li><a href="menu/apropos.html">À propos</a></li>
-        <li><a href="menu/faq.html">FAQ</a></li>
+        <li><a href="apropos.html">À propos</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href="top.html">Top Animés</a></li>
-        <li><a href="menu/mentions.html">Mentions légales</a></li>
+        <li><a href="mentions.html">Mentions légales</a></li>
     </ul>
 </div>
 
