--- a/anime.html
+++ b/anime.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="anime.css">
     <script src="tracking.js"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MJWGDFPRD9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MJWGDFPRD9');
+</script>
 <body>
 <header>
     <div class="header-center">
