--- a/apropos.html
+++ b/apropos.html
@@ -37,7 +37,7 @@
 
         <section>
             <h2>5. À propos du créateur</h2>
-            <p>Développé par S.W Abimaël Yaméogo alias aY Hack, passionné de développement web et de culture otaku. L’objectif est de concilier design moderne, rapidité d’accès et respect des œuvres originales.</p>
+            <p>Développé par S.W Abimaël Yaméogo, passionné de développement web et de culture otaku. L’objectif est de concilier design moderne, rapidité d’accès et respect des œuvres originales.</p>
         </section>
 
         <section>
