--- a/FAQ.html
+++ b/FAQ.html
@@ -11,7 +11,7 @@
 <header>
     <div class="logo-title">
         <img src="logo.png" alt="AnimeQuotes Logo" class="logo">
-        <h1>FAQ</h1>
+        <h1>FAQ UTILISATEUR</h1>
     </div>
 </header>
 
@@ -25,8 +25,8 @@
     </div>
 
     <div class="faq-item">
-        <h3>Puis-je proposer un nouvel animé ?</h3>
-        <p>Oui, rendez-vous sur le formulaire pour envoyer vos propositions. Chaque ajout est vérifié avant d’être publié.</p>
+        <h3>Puis-je proposer un animé à ajouter ?</h3>
+        <p>Oui, cela est faisable. rendez-vous sur le formulaire pour envoyer vos propositions. Chaque ajout est vérifié avant d’être publié.</p>
     </div>
 
     <div class="faq-item">
@@ -45,8 +45,8 @@
     </div>
 
     <div class="faq-item">
-        <h3>Puis-je télécharger une citation en image ?</h3>
-        <p>Oui, cliquez sur le bouton “Télécharger” sous chaque citation. Le nom de l’animé et un numéro unique seront automatiquement inclus pour éviter les doublons.</p>
+        <h3>Pourquoi certaines citations disparaissent ?</h3>
+        <p>Le nettoyage périodique élimine les doublons, les citations mal attribuées ou les sources douteuses. L’objectif est de maintenir une base propre, qualitative et cohérente.</p>
     </div>
 
     <div class="faq-item">
@@ -62,7 +62,7 @@
     <!-- ------------------- CARTE CONTACT ------------------- -->
     <section id="contact" class="contact-card">
         <h3>Contact direct</h3>
-        <p>Pour toute question ou suggestion, utilisez le formulaire ci-dessous :</p>
+        <p>Pour toute autre question ou suggestion, utilisez le formulaire ci-dessous :</p>
 
         <form id="faq-contact-form" class="contact-form">
             <div class="form-group">
