--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
     <title>ANIMQUOTES</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MJWGDFPRD9"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-MJWGDFPRD9');
-</script>
+<script defer src="https://cloud.umami.is/script.js" data-website-id="890fc4b6-1bff-4466-b712-6a301510c841"></script>
 <body>
 
 <!-- PETIT MENU MODAL -->
