--- a/apropos.html
+++ b/apropos.html
@@ -6,6 +6,7 @@
     <title>À propos - ANIMQUOTES</title>
     <link rel="stylesheet" href="apropos.css">
 </head>
+<script defer src="https://cloud.umami.is/script.js" data-website-id="890fc4b6-1bff-4466-b712-6a301510c841"></script>
 <body>
     <header>
         <div class="logo-title">
