--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
   const analytics = getAnalytics(app);
 </script>
     <!-- JS -->
+<script type="module" src="inject.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
