--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+<script>
+  if (!localStorage.getItem("animquotesVisited")) {
+    window.location.href = "splash.html";
+  }
+</script>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-E3YEHLJCTM"></script>
 <script>
