Redirect to home.html instead of splash.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <script>
   if (!localStorage.getItem("animquotesVisited")) {
-    window.location.href = "splash.html";
+    window.location.href = "home.html";
   }
 </script>
 <!-- Google tag (gtag.js) -->
