Redirect to index.html instead of home.html

--- a/indexhome.html
+++ b/indexhome.html
@@ -3,7 +3,7 @@
 <head>
 <script>
   if (!localStorage.getItem("animquotesVisited")) {
-    window.location.href = "home.html";
+    window.location.href = "index.html";
   }
 </script>
 <!-- Google tag (gtag.js) -->
