--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANIMQUOTES</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
 </head>
 <script defer src="https://cloud.umami.is/script.js" data-website-id="890fc4b6-1bff-4466-b712-6a301510c841"></script>
 <body>
@@ -62,6 +62,6 @@
         <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
     </footer>
     <!-- JS -->
-    <script src="script.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
