--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="loader"></div>
   </div>
 
+  <!-- Footer -->
   <footer>
     <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
   </footer>
