--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bienvenue sur Animquotes</h1>
+    <h1>BIENVENUE SUR ANIMQUOTES</h1>
     <p>Des citations d’animés pour inspirer et avancer</p>
     <div class="loader"></div>
   </div>
