--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <div class="container">
     <h1>BIENVENUE SUR ANIMQUOTES</h1>
     <p>Des citations d’animés pour inspirer et avancer</p>
-    <div class="loader"></div>
-  </div>
-
+   <div class="loader">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
   <!-- Footer -->
   <footer>
     <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
