--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <div class="container">
     <h1>BIENVENUE SUR ANIMQUOTES</h1>
     <p>Des citations d’animés pour inspirer et avancer</p>
-   <div class="loader">
-  <span></span>
-  <span></span>
-  <span></span>
+   <div class="loader-container">
+  <div class="progress-bar">
+    <div class="progress"></div>
+  </div>
+  <p>Chargement...</p>
 </div>
   <!-- Footer -->
   <footer>
