--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 <body>
   <div class="container">
     <h1>BIENVENUE SUR ANIMQUOTES</h1>
-    <p>Des citations d’animés pour inspirer et avancer</p>
-   <div class="loader-container">
-  <div class="progress-bar">
-    <div class="progress"></div>
+    <p id="quote">...</p>
+
+    <div class="loader-container">
+      <div class="progress-bar">
+        <div class="progress"></div>
+      </div>
+      <p>Chargement...</p>
+    </div>
   </div>
-  <p>Chargement...</p>
-</div>
+
   <!-- Footer -->
   <footer>
     <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
