--- a/anime.html
+++ b/anime.html
@@ -50,4 +50,24 @@
 
     <script src="anime.js"></script>
 </body>
+<!-- Notification succès copie -->
+<div id="copy-success" class="success" style="display:none; position:fixed; bottom:20px; right:20px; z-index:9999;">
+  <div class="success__icon">
+    <svg fill="none" height="24" viewBox="0 0 24 24" width="24">
+      <path fill-rule="evenodd" clip-rule="evenodd"
+        d="m12 1c-6.075 0-11 4.925-11 11s4.925 11 11 11 11-4.925 11-11-4.925-11-11-11zm4.768 9.14-4.3 5.159-2.225-2.226 1.414-1.414 1.518 1.518 3.593-4.31z"
+        fill="#393a37"/>
+    </svg>
+  </div>
+
+  <div class="success__title">Citation copiée</div>
+
+  <div class="success__close" onclick="hideCopyAlert()">
+    <svg height="20" viewBox="0 0 20 20" width="20">
+      <path
+        d="m15.8333 5.34166-1.175-1.175-4.6583 4.65834-4.65833-4.65834-1.175 1.175 4.65833 4.65834-4.65833 4.6583 1.175 1.175 4.65833-4.6583 4.6583 4.6583 1.175-1.175-4.6583-4.6583z"
+        fill="#393a37"/>
+    </svg>
+  </div>
+</div>
 </html>
