--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
+        <p>©2025. ANIMQUOTES. Par aY Hack</p>
     </footer>
     <!-- JS -->
     <script src="home.js"></script>
