--- a/anime.html
+++ b/anime.html
@@ -45,7 +45,7 @@
     </main>
 
     <footer>
-        <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
+        <p>©2025. ANIMQUOTES. Par aY Hack </p>
     </footer>
 
     <script src="anime.js"></script>
