--- a/apropos.html
+++ b/apropos.html
@@ -82,7 +82,7 @@
         </section>
     </main>
         <footer>
-        <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
+        <p>©2025. ANIMQUOTES.Par aY Hack</p>
     </footer>
 </body>
 </html>
