--- a/faq.html
+++ b/faq.html
@@ -90,7 +90,7 @@
 </main>
 
 <footer>
-    <p>©2025 Par aY Hack (S.W Abimaël Yaméogo)</p>
+    <p>©2025.AIMQUOTES. Par aY Hack</p>
 </footer>
 
 <script src="faq.js"></script>
