--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
+    <p>©2025.ANIMQUOTES. Par aY Hack</p>
   </footer>
 
   <script src="script.js"></script>
