--- a/mentions.html
+++ b/mentions.html
@@ -94,7 +94,7 @@
 </main>
 
 <footer>
-    <p>©2025 Par aY Hack (S.W Abimaël Yaméogo)</p>
+    <p>©2025. ANIMQUOTES. Par aY Hack</p>
 </footer>
 
 <!-- JS externe -->
