--- a/top.html
+++ b/top.html
@@ -24,7 +24,7 @@
         </section>
     </main>
     <footer>
-        <p>©2025 Par aY Hack (S.w Abimaël Yaméogo)</p>
+        <p>©2025. ANIMQUOTES. Par aY Hack</p>
     </footer>
     <script src="tracking.js"></script>
     <script src="top.js"></script>
