--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Bienvenue – Animquotes</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Bienvenue – Animquotes</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>BIENVENUE SUR ANIMQUOTES</h1>
-    <p id="quote">...</p>
 
-    <div class="loader-container">
-      <div class="progress-bar">
-        <div class="progress"></div>
-      </div>
-      <p>Chargement...</p>
-    </div>
-  </div>
+<div class="container">
+<h1>BIENVENUE SUR ANIMQUOTES</h1>
+<p id="quote">...</p>
+<div class="loader-container">
+<div class="progress-bar"><div class="progress"></div></div>
+<p>Chargement...</p>
+</div>
+</div>
 
-  <!-- Footer -->
-  <footer>
-    <p>©2025.ANIMQUOTES. Par aY Hack</p>
-  </footer>
+<footer>
+<p>©2025 ANIMQUOTES Par aY Hack</p>
+</footer>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
