--- a/mentions.html
+++ b/mentions.html
@@ -2,103 +2,93 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Mentions légales - ANIMQUOTES</title>
 <link rel="stylesheet" href="mentions.css">
-</head>
 <script defer src="https://cloud.umami.is/script.js" data-website-id="890fc4b6-1bff-4466-b712-6a301510c841"></script>
-
+</head>
 <body>
 
 <header>
-    <div class="logo-title">
-        <img src="logo.png" alt="ANIMQUOTES Logo" class="logo">
-        <h1>MENTIONS LÉGALES</h1>
-    </div>
+<div class="logo-title">
+<img src="logo.png" alt="ANIMQUOTES Logo" class="logo">
+<h1>MENTIONS LÉGALES</h1>
+</div>
 </header>
 
 <main class="mentions-container">
 
-    <section>
-        <h2>1. Éditeur du site</h2>
-        <p>Le site <strong>ANIMQUOTES</strong> est édité par <strong>S.W Abimaël Yaméogo, alias aY Hack</strong>, passionné de développement web et de culture anime.</p>
-    </section>
+<section>
+<h2>1. Éditeur du site</h2>
+<p>Le site <strong>ANIMQUOTES</strong> est édité par <strong>S.W Abimaël Yaméogo, alias aY Hack</strong>, passionné de développement web et de culture anime.</p>
+</section>
 
-    <section>
-        <h2>2. Propriété intellectuelle</h2>
-        <p>Tous les contenus (citations, textes, images associées) sont la propriété de leurs auteurs respectifs. AnimeQuotes ne revendique aucun droit sur les œuvres originales et les citations sont utilisées à titre informatif et culturel.</p>
-    </section>
+<section>
+<h2>2. Propriété intellectuelle</h2>
+<p>Tous les contenus sont la propriété de leurs auteurs respectifs. ANIMQUOTES ne revendique aucun droit sur les œuvres originales. Les citations sont utilisées à des fins informatives et culturelles.</p>
+</section>
 
-    <section>
-        <h2>3. Utilisation du site</h2>
-        <p>L’utilisateur s’engage à utiliser le site de manière responsable et respectueuse. Il est interdit de reproduire, distribuer ou publier le contenu du site à des fins commerciales sans autorisation.</p>
-    </section>
+<section>
+<h2>3. Utilisation du site</h2>
+<p>L’utilisateur s’engage à utiliser le site de manière responsable. Toute reproduction ou diffusion à des fins commerciales sans autorisation est interdite.</p>
+</section>
 
-    <section>
-        <h2>4. Données personnelles</h2>
-        <p>Aucune donnée personnelle n’est collectée directement par le site. Les utilisateurs peuvent proposer des citations via la FAQ, et ces informations sont utilisées uniquement pour améliorer le site.</p>
-    </section>
+<section>
+<h2>4. Données personnelles</h2>
+<p>Aucune donnée personnelle n’est collectée directement. Les contributions éventuelles sont utilisées uniquement pour améliorer le contenu du site.</p>
+</section>
 
-    <section>
-        <h2>5. Responsabilité</h2>
-        <p>ANIMQUOTES s’efforce de fournir un contenu exact et à jour, mais ne peut garantir l’exactitude ou l’exhaustivité des informations. L’éditeur ne peut être tenu responsable des dommages liés à l’utilisation du site.</p>
-    </section>
+<section>
+<h2>5. Responsabilité</h2>
+<p>ANIMQUOTES s’efforce de fournir des informations exactes mais ne garantit ni leur exhaustivité ni leur actualisation permanente.</p>
+</section>
 
-    <section>
-        <h2>6. Modifications des CGU</h2>
-        <p>ANIMQUOTES se réserve le droit de modifier ces mentions légales et CGU à tout moment. Il est recommandé aux utilisateurs de consulter régulièrement cette page.</p>
-    </section>
+<section>
+<h2>6. Modifications</h2>
+<p>Les présentes mentions peuvent être modifiées à tout moment. Il est recommandé de consulter régulièrement cette page.</p>
+</section>
 
-    <section>
-        <h2>7. Liens externes</h2>
-        <p>Le site peut contenir des liens vers d’autres sites. ANIMQUOTES n’est pas responsable du contenu de ces sites et recommande aux utilisateurs de consulter leurs politiques de confidentialité.</p>
-    </section>
+<section>
+<h2>7. Liens externes</h2>
+<p>ANIMQUOTES décline toute responsabilité concernant le contenu des sites tiers accessibles via des liens externes.</p>
+</section>
 
-    <section>
-        <h2>8. Cookies</h2>
-        <p>Le site utilise des cookies pour améliorer l’expérience utilisateur et pour suivre les statistiques de consultation de manière anonyme via localStorage.</p>
-    </section>
+<section>
+<h2>8. Cookies</h2>
+<p>Des cookies techniques et statistiques anonymes peuvent être utilisés afin d’améliorer l’expérience utilisateur.</p>
+</section>
 
-    <section>
-        <h2>9. Dernière mise à jour</h2>
-        <p>Cette page a été mise à jour pour la dernière fois le <strong>08/12/2025</strong>.</p>
-    </section>
+<section>
+<h2>9. Dernière mise à jour</h2>
+<p>Dernière mise à jour : <strong>08/12/2025</strong>.</p>
+</section>
 
-    <section>
-        <h2>10. Contact juridique et réclamations</h2>
-        <p>Pour toute question juridique ou réclamation, veuillez remplir le formulaire ci-dessous. Votre message nous sera envoyé directement.</p>
-        
-        <!-- Formulaire Web3Forms -->
-        <form id="contact-form" class="contact-form">
-            <div class="form-group">
-                <label for="name">Nom :</label>
-                <input type="text" id="name" name="name" placeholder="Votre nom" required>
-            </div>
+<section>
+<h2>10. Contact juridique</h2>
+<p>Pour toute question ou réclamation, veuillez utiliser le formulaire ci-dessous.</p>
 
-            <div class="form-group">
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" placeholder="Votre email" required>
-            </div>
+<form id="contact-form" class="contact-form">
+<label for="name">Nom</label>
+<input type="text" id="name" name="name" placeholder="Votre nom" required>
 
-            <div class="form-group">
-                <label for="message">Message :</label>
-                <textarea id="message" name="message" rows="5" placeholder="Votre message" required></textarea>
-            </div>
+<label for="email">Email</label>
+<input type="email" id="email" name="email" placeholder="Votre email" required>
 
-            <button type="submit" class="btn-submit">Envoyer</button>
-        </form>
+<label for="message">Message</label>
+<textarea id="message" name="message" rows="5" placeholder="Votre message" required></textarea>
 
-        <div id="form-status" class="form-status"></div>
-    </section>
+<button type="submit">Envoyer</button>
+</form>
+
+<div id="form-status"></div>
+</section>
 
 </main>
 
 <footer>
-    <p>©2025. ANIMQUOTES. Par aY Hack</p>
+<p>©2025 ANIMQUOTES Par aY Hack</p>
 </footer>
 
-<!-- JS externe -->
 <script src="contact.js"></script>
-
 </body>
 </html>
