--- a/top.html
+++ b/top.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Animés - AnimeQuotes</title>
-    <link rel="stylesheet" href="top.css">
-</head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Top Animés – AnimQuotes</title>
+<link rel="stylesheet" href="top.css">
 <script defer src="https://cloud.umami.is/script.js" data-website-id="890fc4b6-1bff-4466-b712-6a301510c841"></script>
-<body>
-    <header>
-        <div class="logo-title">
-            <img src="logo.png" alt="AnimeQuotes Logo" class="logo">
-            <h1>ANIMQUOTES</h1>
-        </div>
-    </header>
+</head>
 
-    <main>
-        <section class="top-animes-section">
-            <h2>Top Animés les plus consultés</h2>
-            <ol id="top-animes-list">
-                <!-- Les animés les plus consultés seront injectés par JS -->
-            </ol>
-        </section>
-    </main>
-    <footer>
-        <p>©2025. ANIMQUOTES. Par aY Hack</p>
-    </footer>
-    <script src="tracking.js"></script>
-    <script src="top.js"></script>
+<body>
+<header>
+<div class="logo-title">
+<img src="logo.png" alt="AnimQuotes" class="logo">
+<h1>ANIMQUOTES</h1>
+</div>
+</header>
+
+<main>
+<section class="top-animes-section" aria-labelledby="top-title">
+<h2 id="top-title">Top animés les plus consultés</h2>
+<ol id="top-animes-list"></ol>
+</section>
+</main>
+
+<footer>
+<p>©2025 ANIMQUOTES · aY Hack</p>
+</footer>
+
+<script src="tracking.js"></script>
+<script src="top.js"></script>
 </body>
 </html>
