--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@ gtag('config','G-E3YEHLJCTM')
 <div id="menu-modal">
 <div class="menu-header">
 <h3>Menu</h3>
-<button id="close-menu">✕</button>
+<button id="menu-close">✕</button>
 </div>
 <ul class="menu-links">
 <li><a href="apropos.html">À propos</a></li>
